<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7A08E48D"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tourist_attractions"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:translationX="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="262dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/burj_khalifa"
                    android:textAlignment="center"
                    android:textColor="#094768"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/burjkhalifa"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/burj_khalifa"
                    app:srcCompat="@drawable/burjkhalifa" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/central_park"
                    android:textAlignment="center"
                    android:textColor="#298F2D"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/centralpark"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="50dp"
                    android:contentDescription="@string/central_park"
                    app:srcCompat="@drawable/centralpark" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/eiffel_tower"
                    android:textAlignment="center"
                    android:textColor="#C1190D"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/eiffel"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/eiffel_tower"
                    app:srcCompat="@drawable/eiffeltower" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/great_wall"
                    android:textAlignment="center"
                    android:textColor="#BFAE16"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/greatwall"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="50dp"
                    android:contentDescription="@string/great_wall"
                    app:srcCompat="@drawable/greatwall" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/niagara_falls"
                    android:textAlignment="center"
                    android:textColor="#0E92CD"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/niagara"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/niagara_falls"
                    app:srcCompat="@drawable/niagara" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/taj_mahal"
                    android:textAlignment="center"
                    android:textColor="#9C27B0"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/tajmahal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="50dp"
                    android:contentDescription="@string/taj_mahal"
                    app:srcCompat="@drawable/tajmahal" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>